--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "flowbite-react-template-vite",
   "private": true,
+  "include": [
+    "src",
+    "src/types"
+  ],
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -52,7 +56,7 @@
     "react-minimal-pie-chart": "^9.1.0",
     "react-router-dom": "^7.1.3",
     "react-spinners": "^0.15.0",
-    "react-toastify": "^9.0.8",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "sweetalert2": "^11.4.29",
     "usehooks-ts": "^3.1.1",
